@@ -21,6 +21,7 @@ Other features
  * ``AbstractEmailForm`` will use ``SHORT_DATETIME_FORMAT`` and ``SHORT_DATE_FORMAT`` Django settings to format date/time values in email (Haydn Greatnews)
  * ``AbstractEmailForm`` now has a separate method (``render_email``) to build up email content on submission emails. See :ref:`form_builder_render_email`. (Haydn Greatnews)
  * Add `pre_page_move` and `post_page_move` signals. (Andy Babic)
+ * Add ability to sort search promotions on listing page (Chris Ranjana, LB (Ben Johnston))
 
 
 Bug fixes
